--- a/pages/LJWebKitJSExt.html
+++ b/pages/LJWebKitJSExt.html
@@ -13,6 +13,10 @@ document.write("<br/> ============= This is from LJWebKit JSExt ljmediaplayer.se
 document.write(ljmediaplayer.setVolume(32)); 
 document.write("<br/> ============= This is from LJWebKit JSExt ljmediaplayer.setMute:");
 document.write(ljmediaplayer.setMute(1)); 
+
+document.write("<br/> ============= This is from LJWebKit JSExt ljfrontpanel:");
+document.write(ljfrontpanel.writeLed("07:59"));
+
 </script> 
 </body> 
 </html>
